Support collect ZGC memory pool metrics